name:                hbot
version:             0.0.1.0
synopsis:            A Hipchat bot server.
-- description:
homepage:            http://github.com/ljsc/hbot
license:             GPL-3
license-file:        LICENSE
author:              Lou Scoras
maintainer:          louis.j.scoras@gmail.com
copyright:           (c) 2014 Louis J Scoras
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hbot
  main-is:             Main.hs
  build-depends:       aeson >= 0.8.0.0 && < 0.9.0.0,
                       base >=4.7 && <4.8,
                       bytestring >= 0.10.4.0 && < 0.11.0.0,
                       containers >= 0.5.5.1 && < 0.6.0.0,
                       http-conduit >= 2.1.4 && < 2.2.0,
                       scotty,
                       text >= 1.1.1.3 && < 1.2.0.0,
                       time >= 1.4.2 && < 1.5.0,
                       transformers >= 0.3.0.0 && < 0.4.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
