name:                hbot
version:             0.0.1.0
synopsis:            A Hipchat bot server.
-- description:
homepage:            http://github.com/ljsc/hbot
license:             GPL-3
license-file:        LICENSE
author:              Lou Scoras
maintainer:          louis.j.scoras@gmail.com
copyright:           (c) 2014 Louis J Scoras
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       aeson >= 0.8.0.0 && < 0.9.0.0,
                       base >=4.7 && <4.8,
                       bytestring >= 0.10.4.0 && < 0.11.0.0,
                       containers >= 0.5.5.1 && < 0.6.0.0,
                       http-conduit >= 2.1.4 && < 2.2.0,
                       mtl >= 2.1.3.1 && < 2.2.0.0,
                       old-locale >= 1.0.0.6 && < 1.1.0.0,
                       parsec >= 3.1.5 && < 3.2.0,
                       scotty,
                       text >= 1.1.1.3 && < 1.2.0.0,
                       time >= 1.4.2 && < 1.5.0,
                       transformers >= 0.3.0.0 && < 0.4.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fwarn-tabs
  exposed-modules:     Hbot.ChatNotification,
                       Hbot.MessageEvent,
                       Hbot.MsgParser,
                       Hbot.Plugins,
                       Hbot.Server

executable hbot
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:       base >=4.7 && <4.8, hbot
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fwarn-tabs

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  build-depends:       base >=4.7 && <4.8,
                       hbot,
                       QuickCheck >= 2.7.6 && < 2.8.0,
                       tasty >= 0.8.1.3 && < 0.9,
                       tasty-quickcheck >= 0.8.1 && < 0.8.2

